--- a/megoldasok.tex
+++ b/megoldasok.tex
@@ -741,6 +741,4 @@ fog(Kövek, [N-X|M], Na, [N-0|M1], Na2) :-
 \subsubsection*{49.~feladat}
 (Megoldás nélkül.)
 \subsubsection*{50.~feladat}
-\begin{program}
-
-\end{program}
+Ld.~az \name{SWI-Prolog} \pr{heaps} modulját.
